fix: provider add status field (#232)
* fix: provider add status field


* fix: code style


* fix: add provider conditions


* fix: update condition in controller


* fix: go mod tidy
